--- a/client/src/pages/Login.css
+++ b/client/src/pages/Login.css
@@ -22,7 +22,7 @@ body.login-page {
 	position: fixed;
 	width: 100%;
 	top: 0;
-	left: 0;
+	right: 350px;
 	overflow: hidden;
 	z-index: 1000;
 }
